Product_Service/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodservdep
spec:
  selector:
    matchLabels:
      app: prodserv
  replicas: 1
  template:
    metadata:
      labels:
        app: prodserv
    spec:
      containers:
        - name: prodserv
          image: prodserv:vf
          ports:
            - containerPort: 8083
          imagePullPolicy: Never
