Product_Service/db-deployment.yaml
# Configure 'Deployment' of mysql server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector: 
    matchLabels:
     app: mysql
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: mysql
    spec:
      containers:
        - image: mysql:8.3.0 # image from docker-hub
          name: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
          - name: mysql-data 
            mountPath: /var/lib/mysql      
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
---
# Define a 'Service' To Expose mysql to Other Services
apiVersion: v1
kind: Service
metadata:
  name: mysql  # DNS name
  labels:
    app: mysql
spec:
  selector:       # mysql Pod Should contain same labels
    app: mysql
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
